--- a/estilosUX pastinha/styles/style.css
+++ b/estilosUX pastinha/styles/style.css
@@ -1,22 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Titillium+Web:wght@200;600&display=swap');
 
-/* 
-font-family: 'Quicksand', sans-serif;
-font-family: 'Titillium Web', sans-serif;
- */
+/* font-family: 'Quicksand', sans-serif;font-family: 'Titillium Web', sans-serif; */
 
 body {
     font-family: 'Quicksand', sans-serif;
     color: grey;
+    background-color: #edeced;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 header {
-    background-color: grey;
+    background-color:  #676767;
 }
-
-header .grid-layout {
+/* código genérico */
+.grid-layout {
     width: 80%;
-    margin: 0 auto;s   
+    margin: 0 auto;
+    
 }
 
 header .header-flex{
@@ -42,10 +47,38 @@ header nav {
     justify-content: space-between;
     align-items: center;
     width: 300px;
-    border: 2px solid white;
 }
 
 header nav a {
     color: white;
     text-decoration: none;
+}
+
+#lapis{
+    width: 100%;
+}
+
+main .colunas-flex {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+main .coluna1 {
+    width: 75%;
+    background-color: white;
+}
+/* aside */
+main .coluna2{
+    width: 23%;
+}
+
+main .coluna2 article {
+    background-color: white;
+    margin-bottom: 20px;
+}
+
+footer {
+    background-color: #676767;
+    color: white;
 }
